WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81349
[Qt] The background is visible for tiles inside the contents area which are not ready
https://bugs.webkit.org/show_bug.cgi?id=81349
Summary
[Qt] The background is visible for tiles inside the contents area which are n...
Kenneth Rohde Christiansen
Reported
2012-03-16 07:04:42 PDT
SSIA
Attachments
Patch
(4.68 KB, patch)
2012-03-16 09:58 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.65 KB, patch)
2012-03-18 09:41 PDT
,
Noam Rosenthal
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch
(4.49 KB, patch)
2012-03-18 11:43 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Noam Rosenthal
Comment 1
2012-03-16 09:58:19 PDT
Created
attachment 132305
[details]
Patch
Simon Hausmann
Comment 2
2012-03-18 03:50:34 PDT
Comment on
attachment 132305
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=132305&action=review
> Source/WebKit2/UIProcess/API/qt/qquickwebpage.cpp:175 > + if (m_contentsNode)
Same in this patch, the if () isn't needed :)
Noam Rosenthal
Comment 3
2012-03-18 09:41:07 PDT
Created
attachment 132493
[details]
Patch for landing
WebKit Review Bot
Comment 4
2012-03-18 09:46:39 PDT
Comment on
attachment 132493
[details]
Patch for landing Rejecting
attachment 132493
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebKit2/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/11980275
Noam Rosenthal
Comment 5
2012-03-18 11:43:26 PDT
Created
attachment 132498
[details]
Patch
WebKit Review Bot
Comment 6
2012-03-18 12:28:34 PDT
Comment on
attachment 132498
[details]
Patch Clearing flags on attachment: 132498 Committed
r111136
: <
http://trac.webkit.org/changeset/111136
>
WebKit Review Bot
Comment 7
2012-03-18 12:28:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug