[Qt] The background is visible for tiles inside the contents area which are not ready https://bugs.webkit.org/show_bug.cgi?id=81349

Reviewed by Simon Hausmann.

Split PageProxyNode to BackgroundSGNode and ContentsSGNode.
BackgroundSGNode paints a solid background, either white or transparent
(depending on drawsTransparentBackground flag).

* UIProcess/API/qt/qquickwebpage.cpp:
(ContentsSGNode):
(ContentsSGNode::ContentsSGNode):
(ContentsSGNode::changedStates):
(ContentsSGNode::~ContentsSGNode):
(BackgroundSGNode):
(BackgroundSGNode::BackgroundSGNode):
(BackgroundSGNode::contentsNode):
(QQuickWebPage::updatePaintNode):


Canonical link: https://commits.webkit.org/98680@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111136 268f45cc-cd09-0410-ab3c-d52691b4dbfc